# CredentialDancersFORTH

./: CMakeLists.txt  README.md
NathanCode/rforth/: int_stack.h  main.c  stack.hh  token.c
SNCode/: main.c  variable_manager.c  variable_manager.h
rforth/: CMakeLists.txt  dictionary.c  int_stack.c  int_stack.h  int_stack.hh  int_stack_tests.cc  main.c  token.c  token.h  variable_manager.c
